# trime

./: PRIVACY.md  README.md  opencc_analysis.md  project_packaging_analysis.md
app/: build.gradle.kts
app/data/rime/luna-pinyin/: luna_pinyin.schema.yaml  luna_pinyin_simp.schema.yaml
app/data/rime/prelude/: default.yaml  key_bindings.yaml
app/src/main/: AndroidManifest.xml
app/src/main/assets/shared/: default.yaml  trime.yaml  wanxiang.schema.yaml  简纯_plus.trime.yaml
app/src/main/java/com/osfans/trime/: TrimeApplication.kt
app/src/main/java/com/osfans/trime/core/: Rime.kt  RimeConfig.kt  RimeDispatcher.kt
app/src/main/java/com/osfans/trime/daemon/: RimeDaemon.kt
app/src/main/java/com/osfans/trime/receiver/: RimeIntentReceiver.kt
app/src/main/java/com/osfans/trime/util/: AppUtils.kt  Const.kt  InputMethodUtils.kt  NinePatchBitmapFactory.kt  ResourceUtils.kt  Uri.kt  Yaml.kt
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/librime/: CMakeLists.txt
app/src/main/jni/librime-lua/: thirdparty
app/src/main/jni/librime-lua/src/: types.cc
app/src/main/jni/librime/plugins/: librime-lua  librime-octagram  librime-predict
app/src/main/jni/librime/src/: CMakeLists.txt
app/src/main/jni/librime_jni/: CMakeLists.txt
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: NativeAppConventionPlugin.kt  ProjectExtensions.kt  Versions.kt
gradle/: libs.versions.toml
wanxiang-main/custom/: wanxiang.custom.yaml
(+26 files in other folders)
